[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ships/fire03.png" type="Texture" id=1]
[ext_resource path="res://assets/ships/spaceships01.png" type="Texture" id=2]
[ext_resource path="res://scenes/shmup_screen/enemy_formations/single_ship/simple_enemy_ship.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 26.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="SimpleEnemyShip" type="Area2D"]
script = ExtResource( 3 )
target_position = Vector2( 100, 100 )
is_shooting = true

[node name="GunPositon" type="Node2D" parent="."]
position = Vector2( 0, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Model01" type="Node2D" parent="."]

[node name="ShipSprite" type="Sprite" parent="Model01"]
position = Vector2( 0, 3.88855 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 256.442, 288.599, 101.653, 146.402 )

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
texture = ExtResource( 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.46
initial_velocity_random = 0.3
scale_amount = 0.5
scale_amount_random = 1.0
color_ramp = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="ExplodeTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
